# ChangeLog for media-sound/mpdcron
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jun 2011; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
  mpdcron-9999.ebuild:
  Switched to git-2 eclass.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
  mpdcron-9999.ebuild, metadata.xml:
  Updated URL for GitHub's recent switch to HTTPS everywhere.

  23 Aug 2010; James Rowe <jnrowe@gmail.com> mpdcron-9999.ebuild:
  Added missing git_src_prepare call.

  14 Aug 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
  mpdcron-9999.ebuild:
  Merged live and released ebuilds.

  19 Apr 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild:
  Keyworded x86.

  19 Apr 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild:
  Keyworded amd64.

  14 Jan 2010; James Rowe <jnrowe@gmail.com> mpdcron-9999.ebuild:
  Dropped keywords in live ebuild.

  09 Jan 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
  mpdcron-9999.ebuild, metadata.xml:
  Added support for building libnotify and scrobbler modules.

*mpdcron-9999 (09 Jan 2010)

  09 Jan 2010; James Rowe <jnrowe@gmail.com> +mpdcron-9999.ebuild:
  Added live git ebuild.

*mpdcron-0.3 (09 Jan 2010)

  09 Jan 2010; James Rowe <jnrowe@gmail.com> +mpdcron-0.3.ebuild,
  +metadata.xml:
  Initial ebuild, based on an ebuild by Matthew Turner.
