@@ -2,15 +2,15 @@
 Hash: SHA512
 
 DIST mpdcron-0.3.tar.bz2 315412 RMD160 e2c4487ec6032fa7b50e4ffe7e03ff678f4e50e3 SHA1 05aea3bdec0c326ebd3cf9a7372d628c8727b66a SHA256 0d3ee40364f4748a18079277570f4e361928ff6216ad2450a49625f2dc954c5a
-EBUILD mpdcron-0.3.ebuild 1759 RMD160 6dd8b7854bf14ea0e080837de397053193068ffc SHA1 b471f179cc62e8fd5f975897c47121ac4cc86392 SHA256 afe66c2ac727e2af86025a0757aa373e98c9b3658c4da2563cf6638a737ce3bd
-EBUILD mpdcron-9999.ebuild 1750 RMD160 38fdb2176c9d0435b15f5908abf9e3920ece9956 SHA1 518c969acc210176213bb6dd275c1665449b131b SHA256 a331af06acec5b31984930f0e713270d50dca59e62cce4a27431563cdf6307d1
-MISC ChangeLog 1451 RMD160 242f6a1f7c3ab5eff8fc1b2c25b1ef565ba57fd6 SHA1 40584fb0d0842ac9d8e59ec1b630fbeee87605fb SHA256 962ef80b792fc7dc111cc0bd66e2ebcdc160d33649bc4bf331d74fbfbf6a459a
+EBUILD mpdcron-0.3.ebuild 1711 RMD160 c02b99a5615b97847566ceab9c243331d27fc353 SHA1 22b63b14be77b299432f65f3cd637a6812b4e9c6 SHA256 c2107b62acc341ca97413a52cf8b84c446eac84c0c0032b46b7bf157fd710448
+EBUILD mpdcron-9999.ebuild 1702 RMD160 2a1cad7b3cbdb7fbdaf8090164b50eca19c39cbb SHA1 302e6977f97f0486b668f3abef9f3f70345e299e SHA256 370d8f4d19f360bd4b8eaa9bec74b7a550d6cab891cd221f4c2eddd37a4fe928
+MISC ChangeLog 1562 RMD160 cdc7fcea228d9ff01d8c6847d6be102cd0a7bfa5 SHA1 10f2c44fc045e3679f4b4fe2632f09117017b573 SHA256 7caafe2f7e5bc98d6b76c621e95adb27a6730567dba8d94374c73fad004869be
 MISC metadata.xml 881 RMD160 c67fd3fe5e0e04a802895044e87334ff7f854264 SHA1 2f6cb609797b4571a17d3a09a7640126516edf8e SHA256 4279d79030d6d6493a92f3f5a76ff7cef5b327d5ac44f534c490353c56edd9c9
 MISC watch 26 RMD160 bcd63e97c7b76fad5c55f3a0137bf9dd7acaead6 SHA1 4c94d1ba72c254e690f973a3128fcd6b22e09b2f SHA256 8a0fbc0ba403213cb7d783d0cd794991ba96103022e518aa5bd163a39f62c4ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4F8YoACgkQzJrj3cAXR0n2lwCfX6uF4PoWW5gXDNqCV61Y+cUj
-UUoAnj5IXWVsDgIIky2uDxqlVdmilOLq
-=w+JJ
+iEYEAREKAAYFAk5mYggACgkQzJrj3cAXR0kGFQCfWchqO+7fA0wFNKXnXViU15hl
+9HEAn3L9Tjl3D8xyJlc06zsnc9g01cDX
+=7c09
 -----END PGP SIGNATURE-----
