@@ -12,7 +12,7 @@ libnotify scrobbler zsh-completion
 
 
 
-2
+4
 
 configure install prepare unpack
 
