@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Sep 2011; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
+  mpdcron-9999.ebuild:
+  Switched to EAPI 4.
+
   25 Jun 2011; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
   mpdcron-9999.ebuild:
   Switched to git-2 eclass.
